// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoyaltyBanner View Component earnedReward isGuest should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={true}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        pointsDescription={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        remainingPlcc=""
      />
      <div
        className="footer alignCenter"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          isGuest={false}
          isPlcc={true}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component earnedReward should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={true}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        pointsDescription={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        remainingPlcc=""
      />
      <div
        className="footer alignCenter"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          isGuest={false}
          isPlcc={true}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={false}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc=""
      />
      <div
        className="footer alignCenter"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          isGuest={false}
          isPlcc={false}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={true}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        pointsDescription={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        remainingPlcc=""
      />
      <div
        className="footer alignCenter"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          isGuest={true}
          isPlcc={true}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={false}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc=""
      />
      <div
        className="footer alignCenter"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          isGuest={false}
          isPlcc={false}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component not isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={false}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc=""
      />
      <div
        className="footer alignCenter"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          isGuest={true}
          isPlcc={false}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;
